Estiliza a parte final do site - footer

--- a/Exercises/Bloco_3/3.3/style.css
+++ b/Exercises/Bloco_3/3.3/style.css
@@ -107,3 +107,36 @@ body{
     margin: 10px;
     
 }
+
+.learning {
+    padding: 30px 70px;
+min-height:  350px;
+}
+
+.learning-left {
+    float: left;
+    max-width: 35%;
+    margin-left: 70px;
+    
+
+}
+
+.learning-right {
+    float: right;
+    margin-right: 70px;
+}
+
+.footer {
+    clear: both;
+    text-align: center;
+    padding-top: 60px;
+}
+
+.footer h4 {
+    margin: 30px;
+}
+
+.learning li {
+    margin-bottom: 30px;
+    list-style-type: square;
+}
