--- a/Exercises/Bloco_3/3.3/style.css
+++ b/Exercises/Bloco_3/3.3/style.css
@@ -93,9 +93,11 @@ body{
     padding: 30px 50px 90px 50px;
     width: 80%;
     margin: auto;
+    text-align: center;
 }
 
 .student-testimonial{
+   
     width: 20%;
     text-align: center;
     margin: 20px;
