Add alteraçoes arq antigos

--- a/Exercises/Bloco_6_Html_Css_FORMS/6.5/styles.css
+++ b/Exercises/Bloco_6_Html_Css_FORMS/6.5/styles.css
@@ -284,10 +284,9 @@ footer ul li:nth-child(4) {
 
 @media only screen and (max-width: 600px) {
   header {
-    justify-content: center;
     position: absolute;
+    justify-content: center;
   }
-  
   header nav {
     display: none;
   }
@@ -296,7 +295,8 @@ footer ul li:nth-child(4) {
     font-size: 1.5em;
     margin-bottom: 15px;
   }
-  .hero h1 {
+
+  .hero h3 {
     font-size: 1em;
     margin-bottom: 15px;
   }
@@ -305,7 +305,7 @@ footer ul li:nth-child(4) {
     padding: 10px 30px;
     text-transform: uppercase;
   }
-  
+
   .know-the-hotel .grid li.small {
     flex-basis: 100%;
   }
@@ -314,12 +314,14 @@ footer ul li:nth-child(4) {
     flex-basis: 100%;
   }
 
-  .features .grid {
+  .features .grid{
     flex-direction: column;
   }
+  .newsletter button{
+    margin-top: 15px;
+  }
 
-
-
-
-
+  footer ul li i{
+    font-size: 35px;
+  }
 }
